# vcardtk

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/vcardtk/: cli.py  core.py
src/vcardtk/normalization/: addresses.py  names.py  numbers.py  photos.py  urls.py
